--- a/webpizza/applipizza/templates/applipizza/base.html
+++ b/webpizza/applipizza/templates/applipizza/base.html
@@ -22,9 +22,11 @@
             <div class="nav_main">
                 <a href="/pizzas/" {% if request.path == '/pizzas/' %}class="active"{% endif %}>Les Pizzas</a>
             </div>
-            <div class="nav_sub">
-                <a href="/pizzas/add/" {% if request.path == '/pizzas/add/' %}class="active"{% endif %}>Ajouter</a>
-            </div>
+            {% if user.is_authenticated %}
+                <div class="nav_sub">
+                    <a href="/pizzas/add/" {% if request.path == '/pizzas/add/' %}class="active"{% endif %}>Ajouter</a>
+                </div>
+            {% endif %}
         </div>
 
         <div class="nav_section">
@@ -32,9 +34,11 @@
                 <a href="/ingredients/" {% if request.path == '/ingredients/' %}class="active"{% endif %}>Les
                     Ingredients</a>
             </div>
-            <div class="nav_sub">
-                <a href="/ingredients/add/" {% if request.path == '/ingredients/add/' %}class="active"{% endif %}>Ajouter</a>
-            </div>
+            {% if user.is_authenticated %}
+                <div class="nav_sub">
+                    <a href="/ingredients/add/" {% if request.path == '/ingredients/add/' %}class="active"{% endif %}>Ajouter</a>
+                </div>
+            {% endif %}
         </div>
 
         {% if user.is_authenticated %}
