--- a/webpizza/applipizza/templates/applipizza/pizza.html
+++ b/webpizza/applipizza/templates/applipizza/pizza.html
@@ -26,7 +26,9 @@
             <tr>
                 <td>Ingrédient</td>
                 <td>Quantité</td>
-                <td>Action</td>
+                {% if user.is_authenticated %}
+                    <td>Action</td>
+                {% endif %}
             </tr>
             </thead>
             <tbody>
@@ -34,22 +36,27 @@
                 <tr>
                     <td>{{ i.ingr.nomIngredient|capfirst }}</td>
                     <td>{{ i.qte }}</td>
-                    <td>
-                        <a class="btn-del" href="/pizzas/{{pizza.idPizza}}/deleteIngredient/{{i.idCompo}}">
-                            <img src="{% static 'applipizza/img/trash-solid.svg' %}" alt="logo_trash">
-                        </a>
-                    </td>
+                    {% if user.is_authenticated %}
+                        <td>
+                            <a class="btn-del" href="/pizzas/{{ pizza.idPizza }}/deleteIngredient/{{ i.idCompo }}">
+                                <img src="{% static 'applipizza/img/trash-solid.svg' %}" alt="logo_trash">
+                            </a>
+                        </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     {% endif %}
-    <h2 class="title">Ajouter un ingrédient</h2>
-    <section class="form_container">
-        <form class="form add-ingredient" action="/pizzas/{{ pizza.idPizza }}/addIngredient/" method="post">
-            {% csrf_token %}
-            {{ form.as_div }}
-            <input type="submit" value="Envoyer">
-        </form>
-    </section>
+
+    {% if user.is_authenticated %}
+        <h2 class="title">Ajouter un ingrédient</h2>
+        <section class="form_container">
+            <form class="form add-ingredient" action="/pizzas/{{ pizza.idPizza }}/addIngredient/" method="post">
+                {% csrf_token %}
+                {{ form.as_div }}
+                <input type="submit" value="Envoyer">
+            </form>
+        </section>
+    {% endif %}
 {% endblock %}
