--- a/webpizza/applipizza/templates/applipizza/pizzas.html
+++ b/webpizza/applipizza/templates/applipizza/pizzas.html
@@ -15,12 +15,15 @@
                     <a class="link-details" href="/pizzas/{{ p.idPizza }}/">
                         <img src="{% static 'applipizza/img/magnifying-glass-solid.svg' %}" alt="logo_magnifying-glass">
                     </a>
-                    <a class="link-details" href="/pizzas/{{ p.idPizza }}/update/">
-                        <img src="{% static 'applipizza/img/pen-solid.svg' %}" alt="logo_pen">
-                    </a>
-                    <a class="link-details" href="/pizzas/{{ p.idPizza }}/delete/">
-                        <img src="{% static 'applipizza/img/trash-solid.svg' %}" alt="logo_pen">
-                    </a>
+
+                    {% if user.is_authenticated %}
+                        <a class="link-details" href="/pizzas/{{ p.idPizza }}/update/">
+                            <img src="{% static 'applipizza/img/pen-solid.svg' %}" alt="logo_pen">
+                        </a>
+                        <a class="link-details" href="/pizzas/{{ p.idPizza }}/delete/">
+                            <img src="{% static 'applipizza/img/trash-solid.svg' %}" alt="logo_pen">
+                        </a>
+                    {% endif %}
                 </li>
             {% endfor %}
         </ul>
