--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -541,7 +541,6 @@ div.formSL form input {
 }
 
 
-
 #container-artiste #profil-artiste-oeuvres {
     display         : flex;
     flex-direction  : column;
@@ -559,3 +558,58 @@ div.formSL form input {
     color           : white;
 }
 
+
+#container-artistes {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : center;
+    align-items     : center;
+    width           : 100%;
+    height          : 100%;
+    padding         : 0 2rem 10rem 2rem;
+    box-sizing      : border-box;
+}
+
+
+#container-artistes .container-content-artistes {
+    display         : flex;
+    justify-content : space-evenly;
+    align-items     : center;
+    width           : 100%;
+    height          : 100%;
+    margin          : 0;
+    padding         : 0;
+    box-sizing      : border-box;
+}
+
+#container-artistes .card-artiste img.oeuvre-image {
+    width      : 20rem;
+    height     : 20rem;
+    box-sizing : border-box;
+    margin     : 0;
+    padding    : 0;
+    object-fit : cover;
+}
+
+
+#container-artistes .card-artiste .card-artiste-infos {
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    gap             : 2rem;
+    width           : 100%;
+    height          : 100%;
+    margin          : 0;
+    padding         : 0;
+    box-sizing      : border-box;
+}
+
+#container-artistes .card-artiste .card-artiste-infos img.user-avatar {
+    width         : 10rem;
+    height        : 10rem;
+    box-sizing    : border-box;
+    margin        : 0;
+    padding       : 0;
+    object-fit    : cover;
+    border-radius : 50%;
+}
