--- a/ArtSpectra/accounts/templates/accounts/artistes.html
+++ b/ArtSpectra/accounts/templates/accounts/artistes.html
@@ -11,23 +11,22 @@
 
         <div class="container-content-artistes">
             {% for artiste in artistes %}
-                <div class="card-artiste">
-                    <img class="oeuvre-image" src="{{ artiste.first_oeuvre.imageOeuvre.url }}" alt="avatar">
+                <a href="{% url 'artiste' artiste.artiste_obj.username %}">
+                    <div class="card-artiste">
+                        <img class="oeuvre-image" src="{{ artiste.first_oeuvre.imageOeuvre.url }}" alt="avatar">
+                        <div class="card-artiste-infos">
+                            <img class="user-avatar" src="
 
-                    <div class="card-artiste-infos">
-                        <img class="user-avatar" src="
-
-
-                                {% if artiste.artiste_obj.avatar != '' %}{{ artiste.artiste_obj.avatar.url }}{% else %}{% static 'appliArtSpectra/img/avatar.png' %}{% endif %}"
-                             alt="avatar">
-                        <div class="card-artiste-infos-text">
-                            <h2>{{ artiste.artiste_obj.username }}</h2>
-                            <p>{{ artiste.artiste_obj.first_name }} {{ artiste.artiste_obj.last_name }}</p>
-                            <p>{{ artiste.artiste_obj.email }}</p>
-                            <p>{{ artiste.artiste_obj.date_joined }}</p>
+                                    {% if artiste.artiste_obj.avatar != '' %}{{ artiste.artiste_obj.avatar.url }}{% else %}{% static 'appliArtSpectra/img/avatar.png' %}{% endif %}"
+                                 alt="avatar">
+                            <div class="card-artiste-infos-text">
+                                <h2>{{ artiste.artiste_obj.username|capfirst }}</h2>
+                                <p>{{ artiste.nb_oeuvres }} oeuvres</p>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
+
             {% endfor %}
         </div>
     </div>
