--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -406,7 +406,7 @@ header #container-connexion .row-name img.user-avatar {
 div.formSL {
     display         : flex;
     flex-direction  : column;
-    justify-content : center;
+    justify-content : flex-start;
     align-items     : center;
     margin          : 0;
     padding         : 0;
@@ -418,13 +418,13 @@ div.formSL {
 div.formSL form {
     display          : flex;
     flex-direction   : column;
-    justify-content  : center;
+    justify-content  : flex-start;
     align-items      : flex-end;
     margin           : 0;
     padding          : 2rem;
     box-sizing       : border-box;
     width            : fit-content;
-    height           : 100%;
+    height           : fit-content;
     background-color : black;
     color            : white;
 }
@@ -582,6 +582,7 @@ div.formSL form input {
     padding         : 0;
     box-sizing      : border-box;
 }
+
 #container-artistes .container-content-artistes a {
     text-decoration : none;
     color           : black;
@@ -595,8 +596,9 @@ div.formSL form input {
     padding    : 0;
     object-fit : cover;
 }
+
 #container-artistes .card-artiste {
-    max-width: 20rem;
+    max-width : 20rem;
 }
 
 
@@ -625,3 +627,72 @@ div.formSL form input {
     object-fit    : cover;
     border-radius : 50%;
 }
+
+section#container_profil {
+    display               : grid;
+    grid-template-columns : 1fr 1fr;
+}
+
+
+section#container_profil .row-title {
+    display     : flex;
+    align-items : center;
+    gap         : 1rem;
+}
+
+.btn {
+    text-decoration  : none;
+    color            : white;
+    background-color : black;
+    padding          : .5rem 1rem;
+    font-weight      : bold;
+    transition       : all 0.4s ease-in-out;
+    letter-spacing   : 0.1rem;
+    border           : 1px solid black;
+}
+
+.btn:hover {
+    background-color : white;
+    color            : black;
+    border           : 1px solid black;
+}
+
+div#container_profil--oeuvre .oeuvre img {
+    width      : 20rem;
+    height     : 20rem;
+    object-fit : cover;
+}
+
+div#container_profil--oeuvre .oeuvre {
+    width           : 100%;
+    height          : 100%;
+    display         : flex;
+    justify-content : flex-start;
+    align-items     : flex-start;
+    gap             : 2rem;
+    margin          : 1rem 0;
+}
+
+div#container_profil--oeuvre .oeuvre h2 {
+    margin : 0;
+}
+
+div#container_profil--oeuvre .oeuvre .container-actions {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : space-between;
+    align-items     : flex-start;
+    height          : 100%;
+    width           : 100%;
+
+}
+
+div#container_profil--oeuvre .oeuvre .container-actions .actions {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : flex-start;
+    align-items     : flex-start;
+    height          : 100%;
+    gap             : 1rem;
+}
+
