feat(panier) : fix de la suppression du panier

--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -305,7 +305,7 @@ header #container-connexion .row-name img.user-avatar {
 }
 
 
-#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content a#addPanier {
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content #addPanier {
     display          : flex;
     justify-content  : space-around;
     align-items      : center;
