feat(all) : ajout différentes verifications

--- a/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/ajouterOeuvre.html
+++ b/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/ajouterOeuvre.html
@@ -74,6 +74,16 @@
                     {% endfor %}
                 </div>
             </div>
+        {% else %}
+            <div id="container_profil">
+                <div class="row-title">
+                    <h1>Vos Oeuvres</h1>
+                    <a class="btn" href="{% url 'ajouterOeuvre' %}">Ajouter une oeuvre</a>
+                </div>
+                <div id="container_profil--oeuvre">
+                    <p>Vous n'avez pas encore d'oeuvre</p>
+                </div>
+            </div>
         {% endif %}
     </section>
 
