--- a/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/oeuvre.html
+++ b/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/oeuvre.html
@@ -26,30 +26,37 @@
                         <b>{{ oeuvre.quantiteOeuvre }}</b>
                     {% endif %}
                 </p>
-                {% if oeuvre.quantiteOeuvre > 0 %}
-                    <a id="addPanier" href="{% url 'ajouter_au_panier' oeuvre.idOeuvre %}"><span>Acheter cette œuvre</span> - <span>{{ oeuvre.prixOeuvre }}€</span></a>
+                {% if user.is_authenticated %}
+                    {% if oeuvre.quantiteOeuvre > 0 %}
+                        <a id="addPanier" href="{% url 'ajouter_au_panier' oeuvre.idOeuvre %}"><span>Acheter cette œuvre</span> - <span>{{ oeuvre.prixOeuvre }}€</span></a>
+                    {% else %}
+                        <span id="addPanier">Oeuvre non disponible à la vente</span>
+                    {% endif %}
                 {% else %}
-                    <span id="addPanier">Oeuvre non disponible à la vente</span>
+                    <a id="addPanier" href="{% url 'login' %}"><span>Acheter cette œuvre</span> - <span>{{ oeuvre.prixOeuvre }}€</span></a>
                 {% endif %}
             </div>
         </div>
     </div>
 
-    <div id="plus-artiste">
-        <h1>Voir plus d'oeuvres de {{ oeuvre.auteurOeuvre|capfirst }}</h1>
-        <div class="container-oeuvre-plus">
-            {% for oeuvre in oeuvresAuteur %}
-                <a href="/oeuvres/{{ oeuvre.slug }}/{{ oeuvre.idOeuvre }}/">
-                    <div class="oeuvre-plus">
-                        <img class="imgOeuvrePlus" src="{{ oeuvre.imageOeuvre.url }}" alt="{{ oeuvre.nomOeuvre }}">
-                        <p class="plus-content">
-                            <span>{{ oeuvre.nomOeuvre|capfirst }}</span>
-                            <span>{{ oeuvre.prixOeuvre }}€</span>
-                        </p>
-                    </div>
-                </a>
-            {% endfor %}
+    {% if oeuvresAuteur|length > 0 %}
+        <div id="plus-artiste">
+            <h1>Voir plus d'oeuvres de {{ oeuvre.auteurOeuvre|capfirst }}</h1>
+            <div class="container-oeuvre-plus">
+                {% for oeuvre in oeuvresAuteur %}
+                    <a href="/oeuvres/{{ oeuvre.slug }}/{{ oeuvre.idOeuvre }}/">
+                        <div class="oeuvre-plus">
+                            <img class="imgOeuvrePlus" src="{{ oeuvre.imageOeuvre.url }}" alt="{{ oeuvre.nomOeuvre }}">
+                            <p class="plus-content">
+                                <span>{{ oeuvre.nomOeuvre|capfirst }}</span>
+                                <span>{{ oeuvre.prixOeuvre }}€</span>
+                            </p>
+                        </div>
+                    </a>
+                {% endfor %}
+            </div>
         </div>
-    </div>
+    {% endif %}
+
 
 {% endblock %}
