feat(forgot_password) : ajout oublie de mots de passe

--- a/ArtSpectra/accounts/templates/accounts/password_reset.html
+++ b/ArtSpectra/accounts/templates/accounts/password_reset.html
@@ -1,4 +1,4 @@
-{% extends 'a/base.html' %}
+{% extends 'appliArtSpectra/base.html' %}
 
 {% block content %}
     <h2>Réinitialisation du mot de passe</h2>
